[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/menu.gd" type="Script" id=1]
[ext_resource path="res://ui/menu.png" type="Texture" id=2]
[ext_resource path="res://ui/objects.png" type="Texture" id=3]
[ext_resource path="res://ui/numbers.png" type="Texture" id=4]
[ext_resource path="res://ui/cursor_001.png" type="Texture" id=5]
[ext_resource path="res://ui/hud.png" type="Texture" id=6]
[ext_resource path="res://ui/heart_small.png" type="Texture" id=7]
[ext_resource path="res://ui/quitmenu.png" type="Texture" id=8]
[ext_resource path="res://ui/cursor_002.png" type="Texture" id=9]
[ext_resource path="res://ui/shift_key.png" type="Texture" id=10]
[ext_resource path="res://ui/x_hl.png" type="Texture" id=11]
[ext_resource path="res://ui/z_hl.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, -72 ), Vector2( 80, 72 ) ]
}

[node name="hud" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="menu" type="Sprite" parent="."]
position = Vector2( 80, -72 )
texture = ExtResource( 2 )

[node name="slot0" type="Sprite" parent="menu"]
position = Vector2( -62, -39 )
texture = ExtResource( 3 )
hframes = 5

[node name="slot1" type="Sprite" parent="menu"]
position = Vector2( -35, -39 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="slot2" type="Sprite" parent="menu"]
position = Vector2( -62, -20 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="slot3" type="Sprite" parent="menu"]
position = Vector2( -35, -20 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="slot4" type="Sprite" parent="menu"]
position = Vector2( -62, 0 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="slot5" type="Sprite" parent="menu"]
position = Vector2( -35, -1 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="slot6" type="Sprite" parent="menu"]
position = Vector2( -62, 19 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="slot7" type="Sprite" parent="menu"]
position = Vector2( -35, 18 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="slot8" type="Sprite" parent="menu"]
position = Vector2( -62, 38 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="slot9" type="Sprite" parent="menu"]
position = Vector2( -35, 37 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="keys" type="Sprite" parent="menu"]
position = Vector2( 72, 62 )
texture = ExtResource( 4 )
centered = false
hframes = 10

[node name="cursor" type="Sprite" parent="."]
visible = false
position = Vector2( 18, 33 )
texture = ExtResource( 5 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 80, 8 )
texture = ExtResource( 6 )

[node name="money1" type="Sprite" parent="."]
position = Vector2( 70, 9 )
texture = ExtResource( 4 )
centered = false
hframes = 10

[node name="money2" type="Sprite" parent="."]
position = Vector2( 75, 9 )
texture = ExtResource( 4 )
centered = false
hframes = 10

[node name="money3" type="Sprite" parent="."]
position = Vector2( 80, 9 )
texture = ExtResource( 4 )
centered = false
hframes = 10

[node name="bomb1" type="Sprite" parent="."]
position = Vector2( 87, 9 )
texture = ExtResource( 4 )
centered = false
hframes = 10

[node name="bomb2" type="Sprite" parent="."]
position = Vector2( 92, 9 )
texture = ExtResource( 4 )
centered = false
hframes = 10

[node name="arrow1" type="Sprite" parent="."]
position = Vector2( 99, 9 )
texture = ExtResource( 4 )
centered = false
hframes = 10

[node name="arrow2" type="Sprite" parent="."]
position = Vector2( 104, 9 )
texture = ExtResource( 4 )
centered = false
hframes = 10

[node name="hearts" type="Sprite" parent="."]
position = Vector2( 114, 4 )
texture = ExtResource( 7 )
hframes = 5

[node name="quit" type="Sprite" parent="."]
visible = false
position = Vector2( 79, 72 )
texture = ExtResource( 8 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )

[node name="qcursor" type="Sprite" parent="."]
visible = false
position = Vector2( 59, 77 )
texture = ExtResource( 9 )

[node name="shift_sprite" type="Sprite" parent="."]
position = Vector2( 1, 6 )
texture = ExtResource( 10 )
centered = false
vframes = 2
hframes = 4

[node name="z_sprite" type="Sprite" parent="."]
position = Vector2( 33, 8 )
texture = ExtResource( 3 )
hframes = 5
frame = 2

[node name="x_sprite" type="Sprite" parent="."]
position = Vector2( 60, 8 )
texture = ExtResource( 3 )
hframes = 5
frame = 1

[node name="x_hl" type="Sprite" parent="."]
visible = false
position = Vector2( 46, 4 )
texture = ExtResource( 11 )
centered = false

[node name="z_hl" type="Sprite" parent="."]
visible = false
position = Vector2( 19, 4 )
texture = ExtResource( 12 )
centered = false
